--- a/templates/craft_sicherungWebsite/templates/fuerSie/daheim/kaffee.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/daheim/kaffee.html
@@ -1,7 +1,10 @@
 
 {% extends "_layouts/layoutHome.html" %}
 
-
+{% block titelfuerseo %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('kaffee').one() %}
+{{ entry.titelfeldFuerJens }}
+{% endblock %}
 
 {% block block1 %}
 
