--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -4,8 +4,8 @@
 
 <style>
 .nav-item {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 </style>
@@ -28,7 +28,7 @@
     </button>
 
     <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <div class="collapse navbar-collapse" id="collapsibleNavbar" style="justify-content: center;">  <!-- Sehr wichtiger justify-content: center-->
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="https://aufbau-Website.de/craft/web/" id="naviUeberschrift"> HOME </a>
