--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
@@ -1,6 +1,11 @@
 
 {% extends "_layouts/layoutHome.html" %}
 
+{% block titelfuerseo %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('peru').one() %}
+{{ entry.titelfeldFuerJens }}
+{% endblock %}
+
 {% block block1 %}
 
 <style>
