--- a/templates/craft_sicherungWebsite/templates/spenden/projektbezogen.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/projektbezogen.html
@@ -1,6 +1,11 @@
 
 {% extends "_layouts/layoutHome.html" %}
 
+{% block titelfuerseo %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('projektbezogen-spenden').one() %}
+{{ entry.titelfeldFuerJens }}
+{% endblock %}
+
 {% block block1 %}
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; position: relative;">
