--- a/templates/craft_sicherungWebsite/templates/spenden/projektbezogen/verschiedenetabs/kinderpate.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/projektbezogen/verschiedenetabs/kinderpate.html
@@ -1,6 +1,12 @@
 
 {% extends "_layouts/layoutHome.html" %}
 
+
+{% block titelfuerseo %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('kinderpate').one() %}
+{{ entry.titelfeldFuerJens }}
+{% endblock %}
+
 {% block block1 %}
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; padding-bottom: 3rem;">
